<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_grey_bkg"
              android:layout_centerVertical="true"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_easy_ilive"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/channel_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="40dp"
            android:maxLength="16"
            android:gravity="center"
            android:hint="@string/input_hint_channel_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:maxLength="10"
            android:hint="@string/input_hint_user_id"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/join_channel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/btn_text_join_channel"/>

        <Button
            android:id="@+id/create_channel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/btn_text_create_channel"/>

    </LinearLayout>

    <Button
        android:id="@+id/watch_channel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_text_watch_live"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/version_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="22dp"
            android:textSize="@dimen/text_size_12"
            android:text="@string/cur_version"/>

        <LinearLayout
            android:id="@+id/web_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="22dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_12"
                android:text="易视云: "/>

            <TextView
                android:id="@+id/contact_web_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_12"
                android:autoLink="web"
                android:text="http://www.easyvaas.com"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
